Meet the trainer section added and styled

--- a/index.html
+++ b/index.html
@@ -63,22 +63,73 @@
         </section>
 
         <!-- What We Do section -->
-        <section>
-            <h2>What We Do</h2>
+        <section id="#what-we-do" class="intro">
+            <h2 class="section-title primary-border">What We Do</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde corrupti soluta alias, ipsa eaque cupiditate officia ut dignissimos et est dolorem iure dolore! Odit suscipit iste laborum eius! Ipsa, molestiae?</p>
         </section>
 
         <!-- What you do section -->
-        <section>
-            <h2>What You Do</h2>
+        <section id="#what-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You Do</h2>
+            <div>
+                <img src="./assets/images/step-1.svg" alt=""/>
+                <h3>Step 1: <span> Fill Out The Form Above.</span></h3>
+                <p>You are already here, so why not?</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-2.svg" alt=""/>
+                <h3>Step 2: <span> Consult With One Of Our Trainers.</span></h3>
+                <p>Are you here to build muscle, lose weight or just feel good?</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-3.svg" alt=""/>
+                <h3>Step 3: <span>Get Running.</span> </h3>
+                <p>Hit the ground running (literally), once your trainer lays out your plan.</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-4.svg" alt=""/>
+                <h3>Step 4: <span>See Results.</span></h3>
+                <p>Bi-Weekly checkins and your trainer will keep you focused</p>
+            </div>        
         </section>
 
         <!-- Your Trainers section-->
-        <section>
-            <h2>Your Trainers</h2>
+        <section id="#your-trainers" class="trainers">
+            <h2 class="section-title primary-border" >Meet The Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="trainer 1 Arron Stephens"/>
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed/Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi repudiandae eum, dolore ducimus dolores laudantium sint magnam, aspernatur amet, perspiciatis adipisci quos dignissimos! Amet deleniti alias maxime, exercitationem ullam sint.</p>
+                </div>                
+            </article>
+
+            <article class="trainer">
+                <img src="./assets/images/trainer-2.jpg" alt="trainer 2"/>
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4> Endurance</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga laboriosam quidem accusantium, autem rerum atque tempora facere sit placeat a quaerat, odit inventore! Repellendus nihil quibusdam sint hic vero voluptatibus.</p>
+                </div>
+            </article>
+
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="trainer 3"/>
+                <div class="trainer-bio text-left">
+                    <h3>Harry "The Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium laudantium, placeat iusto quod soluta, unde eligendi exercitationem, cum animi culpa facilis assumenda facere inventore? Impedit amet expedita beatae. Labore, sapiente.</p>
+                </div>
+            </article>
+         
         </section>
 
         <!-- Reach out section-->
-        <section>
+        <section id="#reach-out">
             <h2>Reach out</h2>
         </section>
         
