--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
         </section>
 
         <!-- What We Do section -->
-        <section id="#what-we-do" class="intro">
+        <section id="what-we-do" class="intro">
             <h2 class="section-title primary-border">What We Do</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde corrupti soluta alias, ipsa eaque cupiditate officia ut dignissimos et est dolorem iure dolore! Odit suscipit iste laborum eius! Ipsa, molestiae?</p>
         </section>
 
         <!-- What you do section -->
-        <section id="#what-you-do" class="steps">
+        <section id="what-you-do" class="steps">
             <h2 class="section-title secondary-border">What You Do</h2>
             <div>
                 <img src="./assets/images/step-1.svg" alt=""/>
@@ -97,7 +97,7 @@
         </section>
 
         <!-- Your Trainers section-->
-        <section id="#your-trainers" class="trainers">
+        <section id="your-trainers" class="trainers">
             <h2 class="section-title primary-border" >Meet The Trainers</h2>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="trainer 1 Arron Stephens"/>
@@ -156,7 +156,7 @@
          <footer>
              <h2> ❤️ Made with love by Run Buddy </h2>
              <div>
-                 <a href="#">Read Our Privacy Policy</a><br />
+                 <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                  &copy; 2019 Run Buddy, Inc.
              </div>
          </footer>
