--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
         
         <!-- hero/jumbotron -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>
+                    Start Building Habits.
+                </h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime iure, aperiam earum rem quisquam molestiae fugit error, culpa nostrum, aliquid velit dolor sunt deleniti quod ex. Ipsa obcaecati quo quia.</p>
+            </div>
+            
             <div  class="hero-form">
                 <h3>Get Started Today!</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult.</p>
