--- a/index.html
+++ b/index.html
@@ -146,38 +146,39 @@
         </section>
 
         <!-- Your Trainers section-->
-        <section id="your-trainers" class="trainers">
+        <section id="your-trainers">
             <div class=="flex-row">
                 <h2 class="section-title primary-border" >Meet The Trainers</h2>
             </div>
             
-            <article class="trainer">
-                <img src="./assets/images/trainer-1.jpg" alt="trainer 1 Arron Stephens"/>
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed/Strength</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi repudiandae eum, dolore ducimus dolores laudantium sint magnam, aspernatur amet, perspiciatis adipisci quos dignissimos! Amet deleniti alias maxime, exercitationem ullam sint.</p>
-                </div>                
-            </article>
+            <div class="trainers">
+                <article class="trainer">
+                    <img src="./assets/images/trainer-1.jpg" alt="trainer 1 Arron Stephens"/>
+                    <div class="trainer-bio ">
+                        <h3 class="trainer-name">Arron Stephens</h3>
+                        <h4 class="trainer-role">Speed/Strength</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi repudiandae eum, dolore ducimus dolores laudantium sint magnam, aspernatur amet, perspiciatis adipisci quos dignissimos! Amet deleniti alias maxime, exercitationem ullam sint.</p>
+                    </div>                
+                </article>
 
-            <article class="trainer">
-                <img src="./assets/images/trainer-2.jpg" alt="trainer 2"/>
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4> Endurance</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga laboriosam quidem accusantium, autem rerum atque tempora facere sit placeat a quaerat, odit inventore! Repellendus nihil quibusdam sint hic vero voluptatibus.</p>
-                </div>
-            </article>
+                <article class="trainer">
+                    <img src="./assets/images/trainer-2.jpg" alt="trainer 2"/>
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Joanna Gill</h3>
+                        <h4 class="trainer-role"> Endurance</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga laboriosam quidem accusantium, autem rerum atque tempora facere sit placeat a quaerat, odit inventore! Repellendus nihil quibusdam sint hic vero voluptatibus.</p>
+                    </div>
+                </article>
 
-            <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="trainer 3"/>
-                <div class="trainer-bio text-left">
-                    <h3>Harry "The Headband" Smith</h3>
-                    <h4>Strength</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium laudantium, placeat iusto quod soluta, unde eligendi exercitationem, cum animi culpa facilis assumenda facere inventore? Impedit amet expedita beatae. Labore, sapiente.</p>
-                </div>
-            </article>
-         
+                <article class="trainer">
+                    <img src="./assets/images/trainer-3.jpg" alt="trainer 3"/>
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+                        <h4 class="trainer-role">Strength</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium laudantium, placeat iusto quod soluta, unde eligendi exercitationem, cum animi culpa facilis assumenda facere inventore? Impedit amet expedita beatae. Labore, sapiente.</p>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <!-- Reach out section-->
